# python-seed

./: .gitignore  .isort.cfg  .readthedocs.yml  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  run.py  setup.cfg
docs/: calculator.md  endpoints.md  index.md  requirements.txt  services.md  tests.md
docs/css/: extra.css
docs/pipelines/: branch_strategy_python.excalidraw
src/: __init__.py  app.py  application.py  exceptions.py
src/api/: calculator.py  health.py
src/config/: .env.shared  settings.py
src/services/: calculator.py  worker.py
tests/: test_calculator.py  test_endpoints_calculator.py  test_endpoints_health.py  test_math.py
